--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<table>
+  <thead>
+    <tr>
+      <th>Book detail</th>
+      <th colspan="4"></th>
+    </tr>
+  </thead>
+
+    <tbody>
+    <tr>
+        <td></td>
+        <td><%= @book.title %></td>
+        <td><%= @book.body %></td>
+        <td><%= link_to "Edit", edit_book_path(@book) %></td>
+        <td><%= link_to "Destroy", book_path(), method: :delete, "data-confirm" => "Are you sure ?" %></td>
+    </tr>
+    </tbody>
+</table>
