[Add]フラッシュメッセージ

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:notice1] %>
+    <p><%= flash[:notice1] %></p>
+<% end %>
+<% if flash[:notice2] %>
+    <p><%= flash[:notice2] %></p>
+<% end %>
+
 <table>
   <thead>
     <tr>
