--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,26 @@
 
+<% if @book.errors.any? %>
+    <div class="error_explanation">
+      <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+      <ul>
+
+      <% @book.errors.full_messages.each do |message| %>
+        <li>
+        <%= message %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+
+
+
+
+
+
+
+
 <h1>Books</h1>
 <main>
 
@@ -26,7 +48,6 @@
 <h1>New book</h1>
 
 <%= form_for(@book) do |f| %>
-
     <h4>Title</h4>
     <%= f.text_field :title %>
 
