--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,14 +13,6 @@
     </div>
   <% end %>
 
-
-
-
-
-
-
-
-
 <h1>Books</h1>
 <main>
 
@@ -36,8 +28,9 @@
     <tbody>
         <tr>
             <td><%= book.title %></td>
-            <td><%= book.title %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
+            
         </tr>
     </tbody>
 <% end %>
