--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,10 +16,24 @@
     <tbody>
     <tr>
         <td></td>
-        <td><%= @book.title %></td>
+        <td><%= link_to @book.title, book_path(@book) %></td>
         <td><%= @book.body %></td>
         <td><%= link_to "Edit", edit_book_path(@book) %></td>
-        <td><%= link_to "Destroy", book_path(), method: :delete, "data-confirm" => "Are you sure ?" %></td>
+        <td><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure ?" %></td>
     </tr>
     </tbody>
 </table>
+
+<h1>New book</h1>
+
+<%= form_for(@book) do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+
+    <h4>Opinion</h4>
+    <%= f.text_area :body %>
+
+    <%= f.submit 'Create Book' %>
+<% end %>
+
+</main>
