--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,36 @@
     <title>BookersRe</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
+ <% if user_signed_in? %>
+     
+      <li class="">
+        <%= link_to 'Home', "#" %>
+      </li>
+      <li class="">
+        <%= link_to 'Users', user_path(current_user.id)  %>
+      </li>
+      <li class="">
+        <%= link_to 'Books', "#" %>
+      </li>
+       <li class="">
+        <%= link_to "log out", destroy_user_session_path, method: :delete %>
+      </li>
+    <% else %>
+      <li class="">
+        <%= link_to "Home", new_user_registration_path %>
+      </li>
+      <li class="">
+        <%= link_to "About", new_user_session_path %>
+      </li>
+       <li class="">
+        <%= link_to "sign up", new_user_registration_path %>
+      </li>
+      <li class="">
+        <%= link_to "sign in", new_user_session_path %>
+      </li>
+    <% end %>
+  </ul>
+  
     <%= yield %>
   </body>
 </html>
