--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <h2>User info</h2>
 <%= form_for(@user) do |f| %>
-<label class="control-label sr-only" for="inputEmail">Name</label>
-<%= f.text_field :name, autofocus: true, id:"inputEmail" %>
-        <span aria-hidden="true"></span>
+<label>Name</label>
+<%= f.text_field :name %>
+<%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>
 <%= f.submit "Update user" %>
 
 <% end %>
