--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,12 @@
 <% if flash[:notice2] %>
     <p><%= flash[:notice2] %></p>
 <% end %>
-
+<h2>User info</h2>
+<h3 class="profile-name"><%= @user.name %></h3>
+    <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-img", style: "width: 100px; height: 100px;") %>
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "Edit", edit_user_path(@user), class: "pull-right" %></p>
+    <% end %>
 <table>
   <thead>
     <tr>
