--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,9 @@
 <%= form_for(@user) do |f| %>
 <label>Name</label>
 <%= f.text_field :name %>
-<%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>
+<%= f.attachment_field :profile_image, class: "user-edit-form" %>
+<h4>Introduction</h4>
+<%= f.text_area :introduction %>
 <%= f.submit "Update user" %>
 
 <% end %>
