--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
-
+<h2>User info</h2>
+<h3 class="profile-name"><%= @user.name %></h3>
+    <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-img", style: "width: 100px; height: 100px;") %>
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "Edit", edit_user_path(@user), class: "pull-right" %></p>
+    <% end %>
 
 <h1>New book</h1>
 
