--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <%= link_to 'Home', "#" %>
       </li>
       <li class="">
-        <%= link_to 'Users', user_path(current_user.id)  %>
+        <%= link_to 'Users', users_path %>
       </li>
       <li class="">
         <%= link_to 'Books', books_path %>
