--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
  <% if user_signed_in? %>
 
       <li class="">
-        <%= link_to 'Home', "#" %>
+        <%= link_to 'Home', user_path(current_user) %>
       </li>
       <li class="">
         <%= link_to 'Users', users_path %>
