--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,7 +28,7 @@
 <% @books.each do |book| %>
     <tbody>
         <tr>
-            <td><%= book.title %></td>
+            <td><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></td>
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
 
