--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,16 @@
 <h2>User info</h2>
-<h3 class="#"><%= @user.name %></h3>
-    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %>
+    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
+    <tbody>
+      <tr></tr>
+      <tr>
+    	  <th>name</th>
+    	  <th><%= @user.name %></</th>
+      </tr><br>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction%></th>
+      </tr>
+</tbody>
     <% if @user.id == current_user.id %>
         <p><%= link_to "Edit", edit_user_path(@user) %></p>
     <% end %>
@@ -32,7 +42,7 @@
 <% @books.each do |book| %>
     <tbody>
         <tr>
-            <th colspan="1"></th>
+            <th><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
 
