--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,25 @@
 <% if flash[:notice2] %>
     <p><%= flash[:notice2] %></p>
 <% end %>
+
+
 <h2>User info</h2>
+    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
+    <tbody>
+      <tr></tr>
+      <tr>
+    	  <th>name</th>
+    	  <th><%= @user.name %></th>
+      </tr><br>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction%></th>
+      </tr>
+    </tbody>
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "Edit", edit_user_path(@user) %></p>
+    <% end %>
+
 
 <table>
   <thead>
