--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,13 +4,14 @@
       <tr></tr>
       <tr>
     	  <th>name</th>
-    	  <th><%= @user.name %></</th>
+    	  <th><%= @user.name %></th>
       </tr><br>
       <tr>
     	  <th>introduction</th>
     	  <th><%= @user.introduction%></th>
       </tr>
-</tbody>
+    </tbody>
+
     <% if @user.id == current_user.id %>
         <p><%= link_to "Edit", edit_user_path(@user) %></p>
     <% end %>
