--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,43 @@
 
 <body>
-userの一覧
+<h2>User info</h2>
+    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
+    <tbody>
+      <tr></tr>
+      <tr>
+    	  <th>name</th>
+    	  <th><%= @user.name %></th>
+      </tr><br>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction%></th>
+      </tr>
+    </tbody>
 
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "Edit", edit_user_path(@user) %></p>
+    <% end %>
+
+<h1>New book</h1>
+
+<%= form_for(@book) do |f| %>
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+
+    <h4>Opinion</h4>
+    <%= f.text_area :body %>
+
+    <%= f.submit 'Create Book' %>
+<% end %>
 <% @users.each do |user| %>
     <tbody>
         <tr>
             <th><%= attachment_image_tag user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
-            <td></td>
-            <td></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
+
         </tr>
-    </body>
+    </tbody>
+<% end %>
+
 
