--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,6 +13,23 @@
     </div>
   <% end %>
 <h2>User info</h2>
+    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
+    <tbody>
+      <tr></tr>
+      <tr>
+    	  <th>name</th>
+    	  <th><%= @user.name %></th>
+      </tr><br>
+      <tr>
+    	  <th>introduction</th>
+    	  <th><%= @user.introduction%></th>
+      </tr>
+    </tbody>
+    <% if @user.id == current_user.id %>
+        <p><%= link_to "Edit", edit_user_path(@user) %></p>
+    <% end %>
+
+
 <h1>New book</h1>
 
 <%= form_for(@book) do |f| %>
@@ -37,17 +54,16 @@
       <th>Opinion</th>
     </tr>
   </thead>
-<% @books.each do |book| %>
+<% @books.each do |f| %>
     <tbody>
         <tr>
-            <td><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></td>
-            <td><%= link_to book.title, book_path(book.id) %></td>
-            <td><%= book.body %></td>
-
+            <th><%= link_to attachment_image_tag(f.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(f.user) %></th>
+            <td><%= link_to f.title, book_path(f.id) %></td>
         </tr>
     </tbody>
 <% end %>
 </table>
+
 
 
 
