--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,24 +5,7 @@
     <p><%= flash[:notice2] %></p>
 <% end %>
 
-
-<h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
-    <tbody>
-      <tr></tr>
-      <tr>
-    	  <th>name</th>
-    	  <th><%= @user.name %></th>
-      </tr><br>
-      <tr>
-    	  <th>introduction</th>
-    	  <th><%= @user.introduction%></th>
-      </tr>
-    </tbody>
-    <% if @user.id == current_user.id %>
-        <p><%= link_to "Edit", edit_user_path(@user) %></p>
-    <% end %>
-
+<%= render 'books/list', book: @bookn, user: @user %>
 
 <table>
   <thead>
@@ -43,16 +26,5 @@
     </tbody>
 </table>
 
-<h1>New book</h1>
-
-<%= form_for(@book) do |f| %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-
-    <%= f.submit 'Create Book' %>
-<% end %>
 
 </main>
