--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         <%= link_to "Home", new_user_registration_path %>
       </li>
       <li class="">
-        <%= link_to "About", new_user_session_path %>
+        <%= link_to "About", about_path %>
       </li>
        <li class="">
         <%= link_to "sign up", new_user_registration_path %>
