--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,6 @@
 
 <body>
-<h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, fallback: 'no_image.jpg' %><br>
-    <tbody>
-      <tr></tr>
-      <tr>
-    	  <th>name</th>
-    	  <th><%= @user.name %></th>
-      </tr><br>
-      <tr>
-    	  <th>introduction</th>
-    	  <th><%= @user.introduction%></th>
-      </tr>
-    </tbody>
-
-    <% if @user.id == current_user.id %>
-        <p><%= link_to "Edit", edit_user_path(@user) %></p>
-    <% end %>
-
-<h1>New book</h1>
-
-<%= form_for(@book) do |f| %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-
-    <%= f.submit 'Create Book' %>
-<% end %>
+<%= render 'books/list', book: @book, user: @user %>
 <% @users.each do |user| %>
     <tbody>
         <tr>
