--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,3 +1,16 @@
+<% if @book.errors.any? %>
+    <div class="error_explanation">
+      <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+      <ul>
+
+      <% @book.errors.full_messages.each do |msg| %>
+        <li>
+        <%= msg %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 <h2>User info</h2>
     <%= attachment_image_tag user, :profile_image, fallback: 'no_image.jpg' %><br>
     <tbody>
