--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
       </li>
     <% else %>
       <li class="">
-        <%= link_to "Home", new_user_registration_path %>
+        <%= link_to "Home", home_path %>
       </li>
       <li class="">
-        <%= link_to "About", about_path %>
+        <%= link_to "About", home_about_path %>
       </li>
        <li class="">
         <%= link_to "sign up", new_user_registration_path %>
