--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,19 @@
+
 <h2>User info</h2>
+
+<% if @user.errors.any? %>
+    <div class="error_explanation">
+      <h2><%= @user.errors.count %> errors prohibited this obj from being saved:</h2>
+      <ul>
+
+      <% @user.errors.full_messages.each do |msg| %>
+        <li>
+        <%= msg %>
+        </li>
+      </ul>
+    </div>
+      <% end %>
+  <% end %>
 
 <%= form_for(@user) do |f| %>
 <label>Name</label>
