[Add]0223_after_lunch

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,11 @@
+
+
+
+<% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+<% end %>
 <%= render 'books/list', book: @book, user: @user %>
+
 
 
 <h1>Books</h1>
