--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,4 @@
+ <body>
 
 <h1>Editing Book</h1>
 <%= form_for(@book) do |f| %>
@@ -10,3 +11,4 @@
 <% end %>
 <%= link_to "Show", book_path(@book.id) %>
 <%= link_to "Back", books_path %>
+</body>
