--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,8 +17,9 @@
 <% @books.each do |f| %>
     <tbody>
         <tr>
-            <th><%= link_to attachment_image_tag(f.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(f.user) %></th>
+            <td><%= link_to attachment_image_tag(f.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(f.user) %></td>
             <td><%= link_to f.title, book_path(f.id) %></td>
+            <td><%= f.body %></td>
         </tr>
     </tbody>
 <% end %>
