--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <body>
 
  <% if user_signed_in? %>
-
+<p>Bookers</p>
       <li class="">
         <%= link_to 'Home', user_path(current_user) %>
       </li>
@@ -26,11 +26,11 @@
         <%= link_to 'Books', books_path %>
       </li>
        <li class="">
-        <%= link_to "log out", destroy_user_session_path, method: :delete %>
+        <%= link_to "logout", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
       <li class="">
-        <%= link_to "Home", home_path %>
+        <%= link_to "Home", root_path %>
       </li>
       <li class="">
         <%= link_to "About", home_about_path %>
@@ -39,7 +39,7 @@
         <%= link_to "sign up", new_user_registration_path %>
       </li>
       <li class="">
-        <%= link_to "sign in", new_user_session_path %>
+        <%= link_to "login", new_user_session_path %>
       </li>
     <% end %>
   </ul>
