--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,6 +21,6 @@
 <%= f.attachment_field :profile_image, class: "user-edit-form" %>
 <h4>Introduction</h4>
 <%= f.text_area :introduction %>
-<%= f.submit "Update user" %>
+<%= f.submit "Update User" %>
 
 <% end %>
