--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,17 @@
  <body>
+<% if @book.errors.any? %>
+    <div class="error_explanation">
+      <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+      <ul>
 
+      <% @book.errors.full_messages.each do |msg| %>
+        <li>
+        <%= msg %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 <h1>Editing Book</h1>
 <%= form_for(@book) do |f| %>
     <h4>Title</h4>
