--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,7 @@
     <tbody>
     <tr>
         <td><%= link_to attachment_image_tag(@book.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(@book.user) %></td>
+        <td><%= link_to @book.user.name, user_path(@book.user.id) %></td>
         <td><%= link_to @book.title, book_path(@book) %></td>
         <td><%= @book.body %></td>
         <% if @user.id == current_user.id %>
