--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,6 +2,11 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </header>
 <body>
+<% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+<% end %>
+
+
     <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <nav class="nav navbar-nav navbar-left">
