--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,15 +1,8 @@
-<header>
-</header>
-<body>
+
   	<div class="#">
       <div class="#">
 
-      	<h1>Welcome to <span class="#"></span><!>Bookers!</h1>
+      	<h1>Welcome to Bookers!</h1>
 
       </div>
     </div>
-
-<footer>
-</footer>
-
-</body>
