--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,37 +5,49 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   </head>
 <body>
 <header>
+<nav class="navbar navbar-inverse">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gnavi">
+    </button>
+  </div>
+  <a class="navbar-brand" href="#">Bookers</a>
 
-
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-3 mb-3">
-
-<button class="navbar-toggler" type="button">
-<span class="navbar-toggler-icon"></span>
-</button>
-
-<a class="navbar-brand">Bookers</a>
-
-<ul class="navbar-nav navbar-right">
-<% if user_signed_in? %>
-<li class="nav-item"><%= link_to 'Home', user_path(current_user), class: "nav-link" %></li>
-<li class="nav-item"><%= link_to 'Users', users_path, class: "nav-link" %></li>
-<li class="nav-item"><%= link_to 'Books', books_path, class: "nav-link" %></li>
-<li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: "nav-link"  %></li>
-<% else %>
-<li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
-<li class="nav-item"><%= link_to "About", home_about_path, class: "nav-link" %></li>
-<li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: "nav-link" %></li>
-<li class="nav-item"><%= link_to "login", new_user_session_path, class: "nav-link" %></li>
-<% end %>
-</ul>
+  <div id="gnavi" class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="">Link1</a></li>
+      <li><a href="">Link2</a></li>
+      <li><a href="">Link3</a></li>
+    </ul>
+  </div>
 </nav>
+    <nav class="navbar navbar-inverse">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Bookers</a>
+
+      <ul class="navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li>
+          <span class="glyphicon glyphicon-home" aria-hidden="true"></span><%= link_to 'Home', user_path(current_user), class: "nav-link" %>
+          </li>
+          <li class="nav-item"><%= link_to 'Users', users_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to 'Books', books_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: "nav-link"  %></li>
+        <% else %>
+          <li class="nav-item"><span class="glyphicon glyphicon-home"></span><%= link_to "Home", root_path, class: "nav-link" %></li>
+          <li class="nav-item"><span class="glyphicon glyphicon-apple" aria-hidden="true"></span><%= link_to "About", home_about_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "login", new_user_session_path, class: "nav-link" %></li>
+      <% end %>
+      </ul>
+  </nav>
 </header>
 <%= yield %>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
 
