--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,41 +14,34 @@
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gnavi">
     </button>
   </div>
-  <a class="navbar-brand" href="#">Bookers</a>
+
+  <a class="navbar-brand navbar-left">Bookers</a>
 
   <div id="gnavi" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="">Link1</a></li>
-      <li><a href="">Link2</a></li>
-      <li><a href="">Link3</a></li>
+    <ul class="nav navbar-nav navbar-right">
+    <% if user_signed_in? %>
+      <li><%= link_to 'Home', user_path(current_user), class: "nav-link" %></li>
+      <li><%= link_to 'Users', users_path, class: "nav-link" %></li>
+      <li><%= link_to 'Books', books_path, class: "nav-link" %></li>
+      <li><%= link_to "logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+    <% else %>
+      <li><%= link_to "Home", root_path, class: "nav-link" %></li>
+      <li><%= link_to "About", home_about_path, class: "nav-link" %></li>
+      <li><%= link_to "sign up", new_user_registration_path, class: "nav-link" %></li>
+      <li><%= link_to "login", new_user_session_path, class: "nav-link" %></li>
+    <% end %>
     </ul>
   </div>
 </nav>
-    <nav class="navbar navbar-inverse">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Bookers</a>
-
-      <ul class="navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li>
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span><%= link_to 'Home', user_path(current_user), class: "nav-link" %>
-          </li>
-          <li class="nav-item"><%= link_to 'Users', users_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to 'Books', books_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "logout", destroy_user_session_path, method: :delete, class: "nav-link"  %></li>
-        <% else %>
-          <li class="nav-item"><span class="glyphicon glyphicon-home"></span><%= link_to "Home", root_path, class: "nav-link" %></li>
-          <li class="nav-item"><span class="glyphicon glyphicon-apple" aria-hidden="true"></span><%= link_to "About", home_about_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "sign up", new_user_registration_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "login", new_user_session_path, class: "nav-link" %></li>
-      <% end %>
-      </ul>
-  </nav>
 </header>
 <%= yield %>
 </body>
 </html>
+
+
+
+
+<p>In  <span class="glyphicon glyphicon-book"></span>Bookers,</p>
+<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 
 
