--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,10 +12,9 @@
     </div>
   <% end %>
 
-
 <h2>User info</h2>
     <%= attachment_image_tag user, :profile_image, fallback: 'no_image.jpg' %><br>
-    <tbody>
+    <table class="table">
       <tr></tr>
       <tr>
     	  <th>name</th>
@@ -25,14 +24,12 @@
     	  <th>introduction</th>
     	  <th><%= user.introduction%></th>
       </tr>
-    </tbody>
+    </table>
     <% if @user.id == current_user.id %>
         <p><%= link_to "Edit", edit_user_path(user) %></p>
     <% end %>
 
-
-
-<h1>New book</h1>
+<h2>New book</h2>
 
 <%= form_for(book) do |f| %>
     <h4>Title</h4>
