--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,31 @@
-<main>
 
-<%= render 'books/list', book: @book, user: @user %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+    <%= render 'books/list', book: @book, user: @user %>
+    </div>
+      <div class="col-xs-9">
+        <h2>Books</h2>
+        <table class="table">
+          <thead>
+            <tr>
+              <th colspan="1"></th>
+              <th>Title</th>
+              <th>Opinion</th>
+            </tr>
+          </thead>
+            <% @books.each do |f| %>
+              <tbody>
+                  <tr>
+                      <td><%= link_to attachment_image_tag(f.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(f.user) %></td>
+                      <td><%= link_to f.title, book_path(f.id) %></td>
+                      <td><%= f.body %></td>
+                  </tr>
+              </tbody>
+            <% end %>
+        </table>
+      </div>
+  </div>
+</div>
 
 
-<h1>Books</h1>
-
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="1"></th>
-      <th>Title</th>
-      <th>Opinion</th>
-    </tr>
-  </thead>
-<% @books.each do |f| %>
-    <tbody>
-        <tr>
-            <td><%= link_to attachment_image_tag(f.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(f.user) %></td>
-            <td><%= link_to f.title, book_path(f.id) %></td>
-            <td><%= f.body %></td>
-        </tr>
-    </tbody>
-<% end %>
-</table>
-
-
-
-
-</main>
