--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,29 +5,34 @@
     <p><%= flash[:notice2] %></p>
 <% end %>
 
-<%= render 'books/list', book: @bookn, user: @user %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Book detail</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-    <tbody>
-    <tr>
-        <td><%= link_to attachment_image_tag(@book.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(@book.user) %></td>
-        <td><%= link_to @book.user.name, user_path(@book.user.id) %></td>
-        <td><%= link_to @book.title, book_path(@book) %></td>
-        <td><%= @book.body %></td>
-        <% if @user.id == current_user.id %>
-        <td><%= link_to "Edit", edit_book_path(@book) %></td>
-        <td><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure ?" %></td>
-         <% end %>
-    </tr>
-    </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+      <%= render 'books/list', book: @bookn, user: @user %>
+    </div>
+    <div class="col-xs-9">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Book detail</th>
+            <th colspan="4"></th>
+          </tr>
+        </thead>
+          <tbody>
+          <tr>
+            <td><%= link_to attachment_image_tag(@book.user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60"),  user_path(@book.user) %><%= link_to @book.user.name, user_path(@book.user.id) %></td>
+            <td><%= link_to @book.title, book_path(@book) %></td>
+            <td><%= @book.body %></td>
+            <% if @user.id == current_user.id %>
+            <td><%= link_to "Edit", edit_book_path(@book) %></td>
+            <td><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "Are you sure ?" %></td>
+            <% end %>
+          </tr>
+          </tbody>
+      </table>
+      </div>
+  </div>
+</div>
 
 
 </main>
