--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,14 @@
+<header>
+</header>
 
+<body>
+<div class="body">
+<div class="container">
 <% if flash[:notice] %>
-    <p><%= flash[:notice] %></p>
+  <p><%= flash[:notice] %></p>
 <% end %>
-
+<div class="row">
+<div class="col-xs-9">
 
 <h1>welcome to Bookers  !!</h1>
 <p>In  <span class="glyphicon glyphicon-book"></span>Bookers,</p>
@@ -12,3 +18,6 @@
 <td><%= link_to "Log in", new_user_session_path(@book) %></td>
 <td><%= link_to "Sign Up", new_user_registration_path(@book) %></td>
 
+<div>
+</div>
+</body>
