--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,30 @@
+<div class="container">
+  <div class="row">
 
-<body>
-
-<%= render 'books/list', book: @book, user: @user %>
-<% @users.each do |user| %>
-    <tbody>
-        <tr>
-            <th><%= attachment_image_tag user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
-            <td><%= user.name %></td>
-            <td><%= link_to "Show", user_path(user.id) %></td>
-
-        </tr>
-    </tbody>
-<% end %>
+    <div class="col-xs-3">
+    <%= render 'books/list', book: @book, user: @user %>
+    </div>
+    
+    <div class="col-xs-9">
+        <h2>Users</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>image</th>
+                <th>name</th>
+                <th colspan="1"></th>
+            </tr>
+            </thead>
+            <% @users.each do |user| %>
+            <tr>
+                <th><%= attachment_image_tag user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
+                <td><%= user.name %></td>
+                <td><%= link_to "Show", user_path(user.id) %></td>
+            </tr>
+            <% end %>
+        </div>
+    </div>
+</div>
 
 
 
