--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,32 @@
-
-
-
 <% if flash[:notice] %>
     <p><%= flash[:notice] %></p>
 <% end %>
-<%= render 'books/list', book: @book, user: @user %>
-
-
-
-<h1>Books</h1>
-
-<main>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="1"></th>
-      <th>Title</th>
-      <th>Opinion</th>
-    </tr>
-  </thead>
-<% @books.each do |book| %>
-    <tbody>
-        <tr>
-            <th><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
-            <td><%= link_to book.title, book_path(book.id) %></td>
-            <td><%= book.body %></td>
-
-        </tr>
-    </tbody>
-<% end %>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-3">
+      <%= render 'books/list', book: @book, user: @user %>
+    </div>
+    <div class="col-xs-9">
+      <h2>Books</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <% @books.each do |book| %>
+          <tbody>
+              <tr>
+                <th><%= attachment_image_tag @user, :profile_image,　format: 'jpeg', fallback: "no_image.jpg", size: "60x60" %></th>
+                <td><%= link_to book.title, book_path(book.id) %></td>
+                <td><%= book.body %></td>
+              </tr>
+          </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
