--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,13 +4,13 @@
 <body>
 <div class="body">
 <div class="container">
+<div class="row">
+<div class="col-xs-9">
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
-<div class="row">
-<div class="col-xs-9">
 
-<h1>welcome to Bookers  !!</h1>
+<h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers  !!</h1>
 <p>In  <span class="glyphicon glyphicon-book"></span>Bookers,</p>
 <p>you can share and exchange  your opinions , inpressions , and emotions</p>
 <p> about various books!</p>
