--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,9 +1,3 @@
 
-  	<div class="#">
-      <div class="#">
 
-      	<h1>Welcome to Bookers!</h1>
-
-      </div>
-    </div>
-</nav><span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+  <h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!</h1>
