--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -2,7 +2,6 @@
     <div class="error_explanation">
       <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
       <ul>
-
       <% @book.errors.full_messages.each do |msg| %>
         <li>
         <%= msg %>
@@ -10,7 +9,7 @@
       <% end %>
       </ul>
     </div>
-  <% end %>
+<% end %>
 
 <h2>User info</h2>
     <%= attachment_image_tag user, :profile_image, fallback: 'no_image.jpg' %><br>
@@ -27,7 +26,7 @@
     </table>
     <% if @user.id == current_user.id %>
       <%= link_to edit_user_path(user) do %>
-      <span class="glyphicon glyphicon-wrench"></span>
+      <button type="button" class="btn btn-default btn-lg btn-block"><span class="glyphicon glyphicon-wrench"></span></button>
       <% end %>
     <% end %>
 
