--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <header>
 <div class="container">
   <nav class="navbar navbar-inverse">
-    <a class="navbar-brand navbar-left">Bookers</a>
+    <nav class="navbar-brand navbar-left">Bookers</nav>
       <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li><%= link_to "Home", user_path(current_user), class: "glyphicon glyphicon-home" %></li>
